<resources>
    <string name="app_name">My Application</string>
    <string name="tran_time">100</string>
    <string name="favorite">Favorite</string>
    <string name="toateorasele">Toate Orașele</string>
    <string name="back">Back</string>
    <string name="refresh">refresh</string>

    <string name="buttonBackText">Back</string>
    <string name="switchColorText">Night Mode</string>
    <string name="buttonSettingsText">Setari</string>
    <string name="textConnecting">Connecting</string>
    <string name="mainActivityTitle">Nivelul Dunării</string>

    <!--- Variabile CardVertical -->

    <string name="cardLocalitate">Localitate: </string>
    <string name="cardKm">Km: </string>
    <string name="cardVariatie">Variatie: </string>
    <string name="cardNivel">Nivel: </string>

    <string name="noInternetConnection">Fara conexiune la internet\n\nDati Refresh</string>

</resources>